Bug 98427 - array checkbox crashes calc in function wizzard
Summary: array checkbox crashes calc in function wizzard
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.1.1.1 rc
Hardware: All All
: high major
Assignee: Markus Mohrhard
URL:
Whiteboard: target:5.2.0 target:5.1.3
Keywords: bibisected, bisected, regression
: 98466 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-03-04 21:36 UTC by Alex
Modified: 2018-04-23 16:47 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alex 2016-03-04 21:36:16 UTC
If you check the "array" checkbox in the function wizzard in Calc without having inserted an array formula into the formula box then calc crashes.

To replicate this.

Open calc, open the function wizzard, check the array checkbox. For me, calc now crashes.
Comment 1 m_a_riosv 2016-03-05 03:25:02 UTC
Reproducible also with.
Win10x64
Version: 5.1.1.3 (x64)
Build ID: 89f508ef3ecebd2cfb8e1def0f0ba9a803b88a6d
CPU Threads: 4; OS Version: Windows 6.19; UI Render: GL; 

regression from:
Versión: 5.0.5.2 (x64)
Id. de compilación: 55b006a02d247b5f7215fc6ea0fde844b30035b3
Comment 2 m_a_riosv 2016-03-06 17:27:49 UTC
*** Bug 98466 has been marked as a duplicate of this bug. ***
Comment 3 raal 2016-03-07 10:54:17 UTC
This seems to have begun at the below commit.
Adding Cc: to Eike Rathke; Could you possibly take a look at this one? Thanks
 6ff07cc29dcf3ba1d13ad8f61017a9729c5e8814 is the first bad commit
commit 6ff07cc29dcf3ba1d13ad8f61017a9729c5e8814
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Fri Dec 18 23:15:25 2015 -0800

    source dc89367a5622748dd7c37b89ac300a663b8b98e9

    source dc89367a5622748dd7c37b89ac300a663b8b98e9

author	Eike Rathke <erack@redhat.com>	2015-12-18 22:22:24 (GMT)
committer	Eike Rathke <erack@redhat.com>	2015-12-18 22:28:14 (GMT)
commit dc89367a5622748dd7c37b89ac300a663b8b98e9 (patch)
tree 07cea3163e2e9a300afda171fa4a7aed793dd153
parent fe88326d35579f2c88efe96a45911affa9c9f174 (diff)
Formula Wizard: evaluating expressions always in matrix context is wrong
Comment 4 Commit Notification 2016-03-22 23:16:24 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d8a15e74da7d7266992db0fe13d6f3189898ea61

missing nullptr check, tdf#98427

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Alex 2016-03-25 12:11:57 UTC
I tested it on the (Windows) daily build and the bug has been resolved. Thanks for the fix!

Build data:
Version: 5.2.0.0.alpha0+
Build ID: 5a8cd51780eaf362536284ee8bd388916a172690
CPU Threads: 4; OS Version: Windows 6.19; UI Render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2016-03-24_06:51:09
Locale: en-GB (en_GB)
Comment 6 Commit Notification 2016-03-29 13:51:54 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=dc74d07b608bfed0df587790e8ca7a29931d96c1&h=libreoffice-5-1

missing nullptr check, tdf#98427

It will be available in 5.1.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 raal 2018-04-23 16:47:32 UTC
uitest done in https://opengrok.libreoffice.org/xref/core/uitest/calc_tests/function_wizard.py -> delete keyword needUItest