missing nullptr check, tdf#98427

Change-Id: I657dc0c84eab6ff5b31976fac3317adc0a99dd51